# aflack

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AIWG.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.aiwg/: .last-doc-sync  .milestones.json  AIWG.md  aiwg.config  sessions.json
.aiwg/architecture/: adr-0001-postiz-posting-scheduler.md  adr-0002-own-event-store.md  adr-0003-local-postgres-pggraph-pgvector-memory.md  adr-0004-claude-fable-director-cli.md  adr-0005-human-gated-jarvis-content-agent-orchestration.md  adr-0006-virality-first-lane-selection-and-persona-optional-form.md  adr-0007-memory-system-of-record-and-bakeoff.md  adr-0007-polygres-system-of-record-memory-tiers.md  adr-0008-draft-ramp-and-analytics-aggregation.md  software-architecture-document.md
.aiwg/creator-commerce-ops/: manifest.json
.aiwg/deployment/: postiz-local-runbook.md
.aiwg/frameworks/: registry.json
.aiwg/gates/: delivery-gate-iteration-003-2026-07-07.md  ioc-validation-report-2026-07-07-execute-1-7.md  ioc-validation-report-2026-07-07.md  pre-construction-gate-2026-07-04.md  security-compliance-gate-2026-07-07.md  security-gate-2026-07-04.md  test-coverage-gate-2026-07-07.md
.aiwg/handoffs/: handoff-report-elaboration-to-construction-2026-07-04.md
.aiwg/intake/: option-matrix.md  project-intake.md  solution-profile.md
.aiwg/marketing/: viral-factory-spec.md
.aiwg/planning/: claude-code-video-builder-runbook.md  cockpit-aflack-integration.md  continuous-improvement-architecture.md  daemon-runtime-architecture.md  development-process-guide.md  director-routine-spec.md  dual-track-workflow.md  frameworkization-roadmap.md  iteration-plan-001.md  iteration-plan-002.md  iteration-plan-003.md  iteration-plan-004.md  publish-quality-policy-draft.md  publish-quality-policy-schema.md  video-analytics-aggregation-plan.md  week-1-mvp-plan.md
.aiwg/reports/: abm-validation-report.md  accelerate-state.json  adversarial-construction-readiness-review-2026-07-05.md  agentmemory-architecture-gap-review-2026-07-05.md  architecture-stability-report.md  aside-live-extraction-status-2026-07-07.md  day-1-status.md  (+31 more)
.claude/: settings.json  settings.json.bak.2026-07-04T03-45-58-131Z  settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: dependency-update-policy.md  monitoring.md
scripts/: aflack-improve-daemon.sh  com.aflack.improve-daemon.plist  detect_dead_flags.py  track_build_performance.py
tests/: test_analytics.py  test_aside_scan.py  test_build_performance.py  test_cli.py  test_cli_requirements.py  test_compliance.py  test_config.py  test_daemon.py  test_daemon_cycle.py  test_dead_flags.py  test_draft_review.py  test_economics.py  test_error_tracking.py  test_feature_flags.py  test_integration.py  test_learning.py  test_learning_unit.py  test_logging.py  test_memory.py  test_metrics.py  test_n_plus_one.py  test_pii.py  test_product_analytics.py  test_prompt_quality.py  test_publishing.py  test_resilience.py  test_tracing.py
(+1087 files in other folders)
