[project]
name = "aflack"
version = "0.1.0"
description = "Local affiliate content pipeline: research, generate, validate, publish, learn."
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
]

[project.scripts]
aflack = "aflack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aflack"]

