[project]
name = "aflack"
version = "0.1.0"
description = "Local affiliate content pipeline: research, generate, validate, publish, learn."
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.11.0",
]

[project.scripts]
aflack = "aflack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aflack"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/aflack/cli.py" = ["E501"]
"src/aflack/daemon.py" = ["E501"]
"tests/test_prompt_quality.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disable_error_code = ["index", "arg-type"]

