[project]
name = "aflack"
version = "0.1.0"
description = "Local affiliate content pipeline: research, generate, validate, publish, learn."
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.5",
  "structlog>=24.0.0",
  "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.0.0",
  "pytest-rerunfailures>=14.0.0",
  "vulture>=2.16",
  "radon>=6.0.0",
  "deptry>=0.20.0",
]

[project.scripts]
aflack = "aflack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aflack"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "N"]

[tool.ruff.lint.per-file-ignores]
"src/aflack/cli.py" = ["E501"]
"src/aflack/daemon.py" = ["E501"]
"tests/test_prompt_quality.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
addopts = [
  "--verbose",
  "--tb=short",
  "--durations=10",
  "--cov=aflack",
  "--cov-fail-under=40",
  "--cov-report=term-missing",
  "--reruns=2",
  "--reruns-delay=1",
]
